# lib/db/src/schema/index.ts
@@ -3,3 +3,5 @@ export * from "./grievances";
 export * from "./announcements";
 export * from "./documents";
 export * from "./users";
+export * from "./conversations";
+export * from "./messages";
